# nyx

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  zitadel.yaml
.junie/: guidelines.md
config/: base.py  db.py  zitadel.py
docs/: auth.md  configuration.md  contributing.md  database-and-migrations.md  getting-started.md  testing.md  troubleshooting.md  zitadel.md
migrations/versions/: 2025-11-02_add_profiles_64c3e0e3f6e7.py
src/: auth.py  auth_controller.py  dependencies.py  guards.py  main.py  models.py  schemas.py  utils.py
src/auth/: controller.py  zitadel_validator.py
src/profiles/: controllers.py  dependencies.py  endpoints.py  models.py  repositories.py  schemas.py  services.py
tests/: debug_zitadel_auth.py  test_auth.py  test_sanity.py  verify_real_login.py
